--- a/assingmnets/f.css
+++ b/assingmnets/f.css
@@ -1,15 +1,19 @@
 body{
     display: flex;
     flex-flow: row wrap;
+    align-items: stretch;
     height: 775px;
-    border: 5px solid chocolate;
+    border: 5px solid coral;
 }
 
 div{
     flex-grow: 1;
     width: 200px;
     margin: 1em;
-    border: 1px solid blue;
-    background-color: darkorange;
+    border: 1px solid olivedrab;
+    background-color: crimson;
     text-align: center;
+}
+#two{
+    flex-grow: 2;
 }
